--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "nanoid": "^5.0.7",
     "next": "14.2.4",
     "primeicons": "^7.0.0",
